--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
     }
     button[disabled] { opacity: .6; cursor: not-allowed; }
     #resultaat { margin-top: 10px; font-size: 18px; font-weight: 700; min-height: 1.5em; }
-    /* klein randje rond het monsterpaneel voor een kaartgevoel */
-    #monster { box-shadow: inset 0 0 0 3px rgba(0,0,0,.08); }
-    /* toegankelijk feedbackvak */
     #live { position: absolute; left: -9999px; }
   </style>
 </head>
@@ -49,39 +46,22 @@
   </div>
 
   <script>
-    // Keuzes
+    // Kleuren
     const opties = [
       "Wit","Grijs","Zwart","Lichtblauw","Donkerblauw","Roze","Paars",
       "Rood","Lichtgroen","Donkergroen","Geel","Oranje"
     ];
-
     const kleurMap = {
-      "Wit":"#ffffff",
-      "Grijs":"#bdbdbd",
-      "Zwart":"#000000",
-      "Lichtblauw":"#87cefa",
-      "Donkerblauw":"#1e3a8a",
-      "Roze":"#ff9acb",
-      "Paars":"#8b5cf6",
-      "Rood":"#ef4444",
-      "Lichtgroen":"#86efac",
-      "Donkergroen":"#166534",
-      "Geel":"#fde047",
-      "Oranje":"#fb923c"
+      "Wit":"#ffffff","Grijs":"#bdbdbd","Zwart":"#000000","Lichtblauw":"#87cefa",
+      "Donkerblauw":"#1e3a8a","Roze":"#ff9acb","Paars":"#8b5cf6","Rood":"#ef4444",
+      "Lichtgroen":"#86efac","Donkergroen":"#166534","Geel":"#fde047","Oranje":"#fb923c"
     };
 
     // Spinner
     const rad = document.getElementById("rad");
     const rctx = rad.getContext("2d");
     const R = rad.width / 2;
-    let hoek = 0;                 // huidige rotatie in graden
-    let bezig = false;
-    let gekozen = "Wit";
-
-    // Monster
-    const mCanvas = document.getElementById("monster");
-    const m = mCanvas.getContext("2d");
-    let monsterKleur = kleurMap[gekozen];
+    let hoek = 0, bezig = false, gekozen = "Wit";
 
     function tekenSchijven() {
       const stap = 2 * Math.PI / opties.length;
@@ -96,10 +76,8 @@
         rctx.strokeStyle = "#222";
         rctx.stroke();
 
-        // tekstkleur voor donkere vlakken
         let tekstkleur = "#000";
         if (naam === "Zwart" || naam === "Donkerblauw" || naam === "Donkergroen") tekstkleur = "#fff";
-
         rctx.save();
         rctx.translate(R, R);
         rctx.rotate(i * stap + stap / 2);
@@ -110,13 +88,8 @@
         rctx.restore();
       }
     }
-
     function tekenPijl() {
-      const tipX = rad.width - 8;
-      const tipY = R;
-      const baseX = rad.width - 42;
-      const halfH = 18;
-
+      const tipX = rad.width - 8, tipY = R, baseX = rad.width - 42, halfH = 18;
       rctx.beginPath();
       rctx.moveTo(tipX, tipY);
       rctx.lineTo(baseX, tipY - halfH);
@@ -124,12 +97,10 @@
       rctx.closePath();
       rctx.fillStyle = "#222";
       rctx.fill();
-      // klein cirkeltje in het midden als as
       rctx.beginPath();
       rctx.arc(R, R, 6, 0, Math.PI * 2);
       rctx.fill();
     }
-
     function renderRad() {
       rctx.clearRect(0, 0, rad.width, rad.height);
       rctx.save();
@@ -140,172 +111,102 @@
       rctx.restore();
       tekenPijl();
     }
-
     function indexOnderPijl() {
-      const n = opties.length;
-      const stap = 360 / n;
-      // originele hoek die onder de pijl ligt
-      let a = (-hoek) % 360;
-      if (a < 0) a += 360;
-      const idx = Math.floor(a / stap) % n;
-      return idx;
+      const n = opties.length, stap = 360 / n;
+      let a = (-hoek) % 360; if (a < 0) a += 360;
+      return Math.floor(a / stap) % n;
     }
-
     function draai() {
       if (bezig) return;
       bezig = true;
       document.getElementById("draaiBtn").disabled = true;
-
-      // start met een flinke slinger
-      let snelheid = 20 + Math.random() * 15; // graden per frame
-      // extra omwentelingen voor spanning
+      let snelheid = 20 + Math.random() * 15;
       hoek += 360 * 4;
-
       function anim() {
-        snelheid *= 0.985;         // wrijving
+        snelheid *= 0.985;
         hoek += snelheid;
-
         renderRad();
-
-        if (snelheid > 0.25) {
-          requestAnimationFrame(anim);
-        } else {
-          // afronden op een klein tikje voor consistentie
+        if (snelheid > 0.25) requestAnimationFrame(anim);
+        else {
           hoek = hoek % 360;
           renderRad();
-
           const idx = indexOnderPijl();
           gekozen = opties[idx];
-          monsterKleur = kleurMap[gekozen];
           toonResultaat(gekozen);
-          tekenMonster();
+          kleurMonster(kleurMap[gekozen]);
           bezig = false;
           document.getElementById("draaiBtn").disabled = false;
         }
       }
       requestAnimationFrame(anim);
     }
-
     function toonResultaat(tekst) {
-      const uit = document.getElementById("resultaat");
-      const live = document.getElementById("live");
-      uit.textContent = `Gekozen kleur: ${tekst}`;
-      live.textContent = `Kleur ${tekst}`;
+      document.getElementById("resultaat").textContent = `Gekozen kleur: ${tekst}`;
+      document.getElementById("live").textContent = `Kleur ${tekst}`;
     }
 
-    // Kleurenmonster: simpele vectorvorm die we kunnen vullen
-    function tekenMonster() {
-      m.clearRect(0, 0, mCanvas.width, mCanvas.height);
+    // Monster met masker en lijnlaag
+    const mCanvas = document.getElementById("monster");
+    const m = mCanvas.getContext("2d");
 
-      // achtergrondkaart
+    const imgMask = new Image();
+    imgMask.src = "monster-mask.png";     // witte silhouette, transparante achtergrond
+    const imgLine = new Image();
+    imgLine.src = "monster-line.png";     // alleen lijnen, transparante achtergrond
+
+    let assetsGereed = false;
+    Promise.all([
+      new Promise(res => imgMask.onload = res),
+      new Promise(res => imgLine.onload = res)
+    ]).then(() => {
+      assetsGereed = true;
+      tekenMonsterKader();
+      kleurMonster(kleurMap[gekozen]);
+    });
+
+    function tekenMonsterKader() {
+      m.clearRect(0, 0, mCanvas.width, mCanvas.height);
       m.save();
       m.lineWidth = 6;
       m.strokeStyle = "#222";
       m.fillStyle = "#fff";
       m.beginPath();
-      const pad = 20;
-      rondeRechthoek(m, pad, pad, mCanvas.width - pad * 2, mCanvas.height - pad * 2, 18);
+      rondeRechthoek(m, 12, 12, mCanvas.width - 24, mCanvas.height - 24, 18);
       m.fill();
       m.stroke();
       m.restore();
+    }
+    function kleurMonster(hex) {
+      if (!assetsGereed) return;
 
-      // lichaam
-      const x = 70, y = 120, w = 260, h = 300;
+      tekenMonsterKader();
 
-      // masker voor lijf
+      // schaal het beeld proportioneel en centreer
+      const pad = 24;
+      const doelW = mCanvas.width - pad * 2;
+      const doelH = mCanvas.height - pad * 2;
+      const ratio = Math.min(doelW / imgMask.width, doelH / imgMask.height);
+      const w = imgMask.width * ratio;
+      const h = imgMask.height * ratio;
+      const x = (mCanvas.width - w) / 2;
+      const y = (mCanvas.height - h) / 2;
+
+      // 1. kleurvlak
       m.save();
-      m.beginPath();
-      // bovenkant licht afgerond
-      m.moveTo(x + 20, y);
-      m.lineTo(x + w - 20, y);
-      m.quadraticCurveTo(x + w, y + 10, x + w, y + 30);
-      m.lineTo(x + w, y + h - 50);
+      m.fillStyle = hex;
+      m.fillRect(x, y, w, h);
 
-      // onderkant met kartels
-      const kartels = 12;
-      const dx = w / kartels;
-      let kY = y + h - 30;
-      for (let i = 0; i < kartels; i++) {
-        const px = x + w - i * dx;
-        const py = i % 2 === 0 ? kY + 25 : kY - 10;
-        m.lineTo(px, py);
-      }
-      m.lineTo(x, y + h - 50);
-      m.lineTo(x, y + 30);
-      m.quadraticCurveTo(x, y + 10, x + 20, y);
-      m.closePath();
+      // 2. masker toepassen op het kleurvlak
+      m.globalCompositeOperation = "destination-in";
+      m.imageSmoothingEnabled = true;
+      m.drawImage(imgMask, x, y, w, h);
 
-      // vul met gekozen kleur, met subtiele schaduw
-      m.fillStyle = monsterKleur;
-      m.fill();
-
-      // lichte glans
-      const grad = m.createLinearGradient(x, y, x, y + h);
-      grad.addColorStop(0, "rgba(255,255,255,.25)");
-      grad.addColorStop(0.5, "rgba(255,255,255,0)");
-      m.fillStyle = grad;
-      m.globalCompositeOperation = "soft-light";
-      m.fill();
+      // 3. terug naar normale compositie
       m.globalCompositeOperation = "source-over";
 
-      // omtrek
-      m.lineWidth = 5;
-      m.strokeStyle = "#222";
-      m.stroke();
-      m.restore();
+      // 4. lijnlaag erbovenop, zodat de originele look intact blijft
+      m.drawImage(imgLine, x, y, w, h);
 
-      // armen
-      m.lineWidth = 6;
-      m.strokeStyle = "#444";
-      m.beginPath();
-      m.moveTo(x - 5, y + 230);
-      m.quadraticCurveTo(x - 40, y + 200, x - 10, y + 160);
-      m.moveTo(x + w + 5, y + 230);
-      m.quadraticCurveTo(x + w + 40, y + 200, x + w - 10, y + 160);
-      m.stroke();
-
-      // benen en voeten
-      m.beginPath();
-      m.moveTo(x + 70, y + h + 20);
-      m.lineTo(x + 70, y + h - 10);
-      m.moveTo(x + w - 70, y + h + 20);
-      m.lineTo(x + w - 70, y + h - 10);
-      m.stroke();
-
-      // ogen
-      tekenOog(x + 120, y + 90, 28);
-      tekenOog(x + 180, y + 90, 28);
-
-      // wenkbrauwen
-      m.lineWidth = 10;
-      m.beginPath();
-      m.moveTo(x + 90, y + 60);
-      m.quadraticCurveTo(x + 140, y + 40, x + 190, y + 60);
-      m.stroke();
-
-      // mond
-      m.lineWidth = 6;
-      m.beginPath();
-      m.moveTo(x + 120, y + 200);
-      m.quadraticCurveTo(x + 150, y + 220, x + 190, y + 200);
-      m.stroke();
-    }
-
-    function tekenOog(cx, cy, r) {
-      m.save();
-      m.fillStyle = "#fff";
-      m.strokeStyle = "#222";
-      m.lineWidth = 5;
-      m.beginPath();
-      m.arc(cx, cy, r, 0, Math.PI * 2);
-      m.fill();
-      m.stroke();
-
-      // pupil
-      m.fillStyle = "#222";
-      m.beginPath();
-      m.arc(cx + r * 0.25, cy + r * 0.1, r * 0.35, 0, Math.PI * 2);
-      m.fill();
       m.restore();
     }
 
@@ -323,9 +224,7 @@
 
     // init
     renderRad();
-    tekenMonster();
     document.getElementById("draaiBtn").addEventListener("click", draai);
-    // toetsenbord, Enter of spatie
     document.addEventListener("keydown", e => {
       if ((e.key === "Enter" || e.code === "Space") && !bezig) draai();
     });
